# sql_query_builder

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md
.github/workflows/: pull-requests.yml
benches/: basic_api.rs
scripts/: coverage_test.sh  test.sh  test_coverage.sh  test_watch.sh  watch_doc.sh  watch_test.sh
src/: behavior.rs  concat.rs  delete.rs  fmt.rs  insert.rs  lib.rs  lib_spec.rs  select.rs  structure.rs  update.rs  utils.rs  values.rs
src/alter_table/: alter_table.rs  alter_table_internal.rs  mod.rs
src/concat/: mod.rs  mysql.rs  non_standard.rs  sql_standard.rs  sqlite.rs
src/create_index/: create_index.rs  create_index_internal.rs  mod.rs
src/create_table/: create_table.rs  create_table_internal.rs  mod.rs
src/delete/: delete.rs  delete_internal.rs  internal_api.rs  mod.rs
src/drop_index/: drop_index.rs  drop_index_internal.rs  mod.rs
src/drop_table/: drop_table.rs  drop_table_internal.rs  mod.rs
src/insert/: insert.rs  insert_internal.rs  mod.rs  (+1 more)
tests/: cargo_feature_postgresql.rs  clause_default_values_spec.rs  clause_delete_from_spec.rs  clause_except_spec.rs  clause_from_spec.rs  clause_group_by_spec.rs  clause_having_spec.rs  clause_insert_into_spec.rs  clause_insert_or_spec.rs  clause_intersect_spec.rs  clause_join_spec.rs  clause_limit_spec.rs  clause_offset_spec.rs  clause_on_conflict_spec.rs  clause_order_by_spec.rs  clause_overriding_spec.rs  clause_partition_spec.rs  clause_replace_into_spec.rs  clause_returning_spec.rs  clause_row_spec.rs  clause_select_spec.rs  clause_set_spec.rs  clause_union_spec.rs  clause_update_or_spec.rs  clause_update_spec.rs  clause_values_spec.rs  clause_where_spec.rs  clause_window_spec.rs  clause_with_spec.rs  clauses_sync_send.rs  command_alter_table_spec.rs  command_begin_spec.rs  command_commit_spec.rs  command_create_index_spec.rs  command_create_table_spec.rs  command_delete_spec.rs  command_drop_index_spec.rs  command_drop_table_spec.rs  command_end_spec.rs  command_insert_spec.rs  (+29 more)
(+15 files in other folders)
