[package]
name = "sql_query_builder"
description = "Write SQL queries in a simple and composable way"
documentation = "https://docs.rs/sql_query_builder"
repository = "https://github.com/belchior/sql_query_builder"
authors = ["Belchior Oliveira <belchior@outlook.com>"]
version = "0.8.4"
edition = "2021"
license = "MIT"
keywords = ["sql", "query", "postgres"]

[features]
postgresql = []

[package.metadata.docs.rs]
features = ["postgresql"]

[dev-dependencies]
pretty_assertions = "1.2.1"
