[package]
name = "sql_query_builder"
description = "Write SQL queries in a simple and composable way"
documentation = "https://docs.rs/sql_query_builder"
repository = "https://github.com/belchior/sql_query_builder"
authors = ["Belchior Oliveira <belchior@outlook.com>"]
version = "2.4.1"
edition = "2021"
rust-version = "1.62"
license = "MIT"
keywords = ["sql", "query", "database", "postgres", "sqlite"]

[features]
postgresql = []
sqlite = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
features = ["postgresql", "sqlite"]

[dev-dependencies]
pretty_assertions = "=1.4.0"
